--- a/src/html/chunk/slider.html
+++ b/src/html/chunk/slider.html
@@ -1,5 +1,5 @@
 <div class="action background-img">
-    <img id="spring2-back" src="./img/svg/spring2.svg"/>
+    <img id="spring2-back" src="./img/svg/spring2.svg" alt=""/>
     <h1>в ацкии учавствуют</h1>
     <!-- Slider main container -->
 <div class="swiper products">
