--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
             <img
                 id="biglogo-back"
                 src="./img/svg/biglogo.svg"
+                alt=""
             />
             <img
                 id="man-back"
