Исправил найденные проблемы

--- a/src/html/chunk/footer.html
+++ b/src/html/chunk/footer.html
@@ -12,12 +12,12 @@
     <div class="footer-share">
         <span>Присоединяйтесь к нам</span>
         <div class="icons">
-            <a href="#"><img src="./img/svg/facebook-icon.svg" alt="f" /></a>
-            <a href="#"><img src="./img/svg/vk-icon.svg" alt="v" /></a>
-            <a href="#"><img src="./img/svg/linkedin-icon.svg" alt="in" /></a>
-            <a href="#"><img src="./img/svg/twitter-icon.svg" alt="t" /></a>
-            <a href="#"><img src="./img/svg/instagram-icon.svg" alt="i" /></a>
-            <a href="#"><img src="./img/svg/pinterest-icon.svg" alt="p" /></a>
+            <a href="#"><img src="./img/svg/footer/facebook-icon.svg" alt="f" /></a>
+            <a href="#"><img src="./img/svg/footer/vk-icon.svg" alt="v" /></a>
+            <a href="#"><img src="./img/svg/footer/linkedin-icon.svg" alt="in" /></a>
+            <a href="#"><img src="./img/svg/footer/twitter-icon.svg" alt="t" /></a>
+            <a href="#"><img src="./img/svg/footer/instagram-icon.svg" alt="i" /></a>
+            <a href="#"><img src="./img/svg/footer/pinterest-icon.svg" alt="p" /></a>
         </div>
     </div>
 </footer>
