--- a/src/html/chunk/header.html
+++ b/src/html/chunk/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-    <img id="menu-icon" src="./img/svg/menu.svg" alt="Menu" />
-    <img id="svg-logo" src="./img/svg/logo.svg" alt="OLTERMANNI"/>
+    <img id="menu-icon" src="./img/svg/menu/menu.svg" alt="Menu" />
+    <img id="svg-logo" src="./img/svg/header/logo.svg" alt="OLTERMANNI"/>
     <div class="header-links">
         <a href="#rules">ПРАВИЛА</a>
         <a href="#footer">ПРИЗЫ</a>
