--- a/src/html/chunk/rules.html
+++ b/src/html/chunk/rules.html
@@ -2,36 +2,36 @@
     <h1>нам 40 лет - вам подарки</h1>
     <div class="rule">
         <div class="rule-item"">
-            <img src="./img/svg/basket.svg" alt="basket" />
+            <img src="./img/svg/rules/basket.svg" alt="basket" />
             <div class="rule-item-text">
                 Покупайте сыр <br />Oltermanni
             </div>
         </div>
-        <img class="rule-arrow" src="./img/svg/arrow.svg" alt=">" />
+        <img class="rule-arrow" src="./img/svg/rules/arrow.svg" alt=">" />
         <div class="rule-item">
-            <img src="./img/svg/notebook.svg" alt="notebook" />
+            <img src="./img/svg/rules/notebook.svg" alt="notebook" />
             <div class="rule-item-text">
                 Регистрируйте чеки <br />на сайте в период <br />с 1
                 сентября по 30 ноября 2020 года
             </div>
         </div>
-        <img class="rule-arrow" src="./img/svg/arrow.svg" alt=">" />
+        <img class="rule-arrow" src="./img/svg/rules/arrow.svg" alt=">" />
         <div class="rule-item">
-            <img src="./img/svg/phone.svg" alt="phone" />
+            <img src="./img/svg/rules/phone.svg" alt="phone" />
             <div class="rule-item-text">
                 Получайте гарантированные призы — деньги на телефон
             </div>
         </div>
-        <img class="rule-arrow" src="./img/svg/arrow.svg" alt=">" />
+        <img class="rule-arrow" src="./img/svg/rules/arrow.svg" alt=">" />
         <div class="rule-item">
-            <img src="./img/svg/top.svg" alt="top" />
+            <img src="./img/svg/rules/top.svg" alt="top" />
             <div class="rule-item-text">
                 Получайте гарантированные призы — деньги на телефон
             </div>
         </div>
-        <img class="rule-arrow" src="./img/svg/arrow.svg" alt=">" />
+        <img class="rule-arrow" src="./img/svg/rules/arrow.svg" alt=">" />
         <div class="rule-item">
-            <img src="./img/svg/ticket.svg" alt="ticket" />
+            <img src="./img/svg/rules/ticket.svg" alt="ticket" />
             <div class="rule-item-text">
                 Получайте гарантированные призы — деньги на телефон
             </div>
