--- a/src/html/chunk/slider.html
+++ b/src/html/chunk/slider.html
@@ -1,5 +1,5 @@
 <div class="action background-img">
-    <img id="spring2-back" src="./img/svg/spring2.svg" alt=""/>
+    <img id="spring2-back" src="./img/svg/background/spring2.svg" alt=""/>
     <h1>в ацкии учавствуют</h1>
     <!-- Slider main container -->
 <div class="swiper products">
@@ -7,32 +7,32 @@
     <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese1.png" alt="" />
+            <img src="./img/png/slider/cheese1.png" alt="" />
             <span class="item-type">Лёгкий, брусок</span>
             <span class="item-weight">180 г</span>
         </div>
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese2.png" alt="" />
+            <img src="./img/png/slider/cheese2.png" alt="" />
             <span class="item-type">Лёгкий, слайсы</span>
             <span class="item-weight">120, 225 г</span>
         </div>
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese3.png" alt="" />
+            <img src="./img/png/slider/cheese3.png" alt="" />
             <span class="item-type">Сливочный, брусок</span>
             <span class="item-weight">200, 300 г</span>
         </div>
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese4.png" alt="" />
+            <img src="./img/png/slider/cheese4.png" alt="" />
             <span class="item-type">Сливочный, слайсы</span>
             <span class="item-weight">1130, 250 г</span>
         </div>
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese1.png" alt="" />
+            <img src="./img/png/slider/cheese1.png" alt="" />
             <span class="item-type">Лёгкий, брусок</span>
             <span class="item-weight">180 г</span>
         </div>
         <div class="container item swiper-slide">
-            <img src="./img/png/cheese2.png" alt="" />
+            <img src="./img/png/slider/cheese2.png" alt="" />
             <span class="item-type">Лёгкий, слайсы</span>
             <span class="item-weight">120, 225 г</span>
         </div>
