--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,23 +12,27 @@
         <div class="container background-img">
             <img
                 id="biglogo-back"
-                src="./img/svg/biglogo.svg"
+                src="./img/svg/main-img/biglogo.svg"
                 alt=""
             />
             <img
                 id="man-back"
-                src="./img/png/man.png"
+                src="./img/png/main-img/man.png"
+                srcset="./img/png/main-img/man@2x.png 2x"
+                loading="lazy"
                 alt="СЫР ВАШЕМУ ДОМУ ОБНОВИ СВОЙ ИНТЕРЬЕР"
             />
             <img
                 id="citchen-back"
-                src="./img/png/citchen.png"
+                src="./img/png/main-img/citchen.png"
+                srcset="./img/png/main-img/citchen@2x.png 2x"
+                loading="lazy"
                 alt="ГЛАВНЫЙ ПРИЗ - НОВЫЙ ИНТЕРЬЕР!"
             />
             <a href="#"><div id="check-button">загрузить чек</div></a>
         </div>
-        <img id="baloon-back" src="./img/svg/baloon.svg" alt="" />
-        <img id="spring-back" src="./img/svg/spring.svg" alt="" />
+        <img id="baloon-back" src="./img/svg/background/baloon.svg" alt="" />
+        <img id="spring-back" src="./img/svg/background/spring.svg" alt="" />
         @@include("./chunk/rules.html")
         @@include("./chunk/slider.html")
         @@include("./chunk/footer.html")
